ADD: doc about simple tree

--- a/docs/tree/1.tree.md
+++ b/docs/tree/1.tree.md
@@ -8,7 +8,7 @@
 
 节点孩子的总数称之为度（degree），没有子孩子的节点称为叶子节点（leaf）。树种所有节点最大的深度称之为该树的高度（height）。
 
-![tree](../img/tree.png)
+![tree](https://github.com/rsj217/eternal/blob/master/docs/img/tree.png)
 
 > 每个节点都可以以自身为根节点成为一个树，这个树即为原来树的子树。此时该树的高度及以该节点为根节点的最大深度。
 
