ADD: doc about simple tree

--- a/docs/tree/1.tree.md
+++ b/docs/tree/1.tree.md
@@ -14,7 +14,9 @@
 
 从树的顶点r出发一直到v，沿途的所有点相对于v而言，都是v的祖先。 
 
-当然，如果一个树一个节点也没有，可以称之为空树，我们可以定义，空树的高度为-1。如果只有一个节点的数，其高度则是0，毕竟一个节点既是根节点也是叶子节点，而根到叶子的路径为0，或者说深度也为0，因此其高度为0。
+而对于v，其后继节点都是其孩子（child），最左的为长子节点，孩子与孩子之间称之为兄弟（sibling），不同的父节点的孩子，虽然深度一样，但是他们不是兄弟，而是表兄。这和人类的家谱是非相似。
 
+
+当然，如果一个树一个节点也没有，可以称之为空树，我们可以定义，空树的高度为-1。如果只有一个节点的数，其高度则是0，毕竟一个节点既是根节点也是叶子节点，而根到叶子的路径为0，或者说深度也为0，因此其高度为0。
 
 
